--- a/src/main/resources/templates/websocket/chat.html
+++ b/src/main/resources/templates/websocket/chat.html
@@ -18,6 +18,7 @@
     <input type="submit" style="display: none;" id="query" value="查询" />
 </form>
 <input type="button" style="display: none;" id="stop" value="停止" />
+<input type="button"  id="dbBackUp" value="数据库备份" />
 <input type="button"  id="dbRevert" value="数据库还原" />
 
 <script th:inline="javascript">
@@ -43,7 +44,10 @@
 
 
     function handleNotification(message) {
-        $("#output").empty();
+        //每屏只显示10条
+        if($("#output").find("b").length == 10){
+            $("#output").find("b").last().remove();
+        }
         $('#output').prepend("<b> " + message.body + "</b><br/>")
     }
 
@@ -58,6 +62,24 @@
     $('#stop').click(function() {sock.close()});
     $('#dbRevert').click(function() {
         location.href = "/dataClear/dbRevertPage";
+    });
+
+    $("#dbBackUp").click(function (e) {
+        e.preventDefault();
+        if(confirm('确定备份吗？')){
+            $.ajax({
+                type: 'POST',
+                dataType: "text",
+                url: "/dataClear/dbBackUp",
+                data: $("form").serialize(),
+                success : function (data){
+                    alert(data);
+                },
+                error: function(XMLHttpRequest, textStatus, errorThrown) {
+                    alert("备份失败！");
+                }
+            });
+        }
     });
 </script>
 
