前端重构，解决浏览器内存泄漏

--- a/src/main/resources/templates/baiduTrail.html
+++ b/src/main/resources/templates/baiduTrail.html
@@ -41,7 +41,7 @@
                     <a  class="toggleDiv dropdown-toggle list-button green-btn" id="trailSearch" >查询</a>
                 </div>
             </div>
-            <div id="map-content"></div>
+            <div id="map-content-baidu"></div>
         </div>
     </div>
 </div>
