--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>基础服务平台</title>
+    <style type="text/css">
+        html{height:100%}
+        body{height:100%;margin:0px;padding:0px}
+        #controller{width:100%; border-bottom:3px outset; height:30px; filter:alpha(Opacity=100); -moz-opacity:1; opacity:1;
+            z-index:10000; background-color:lightblue;}
+        #container{height:100%}
+    </style>
     <link th:href="@{global/plugins/font-awesome/css/font-awesome.min.css}" rel="stylesheet" />
     <link th:href="@{global/plugins/simple-line-icons/simple-line-icons.min.css}" rel="stylesheet"  />
     <link th:href="@{global/plugins/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
@@ -29,6 +36,8 @@
     <link th:href="@{layouts/layout5/css/layout.min.css}" rel="stylesheet"  />
     <link th:href="@{layouts/layout5/css/custom.min.css}" rel="stylesheet"  />
     <link th:href="@{layouts/layout5/css/newui.css}" rel="stylesheet" />
+    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
+    <link rel="stylesheet" href="layouts/amap/info_form.css"/>
     <!-- END THEME LAYOUT STYLES -->
     <!--<link rel="shortcut icon" th:href="@{pages/img/favicon.ico}"/>-->
 </head>
@@ -58,23 +67,68 @@
                 <!--</div>-->
                 <ul class="left-bar_menu">
                     <li class="toplink">
-                        <a href="#!position" class="text-uppercase toplevel locatenav"><i class="icon-pointer"></i><span>车辆定位</span></a>
+                        <a href="javascript:void(0)" class="text-uppercase toplevel locatenav"><i class="icon-pointer"></i><span>车辆定位</span></a>
                         <ul class="left-bar_submenu locatemenu">
                             <li>
-                                <a href="#!position" class="nav-link">实时位置</a>
+                                <a href="javascript:void(0)" class="nav-link" id="position">实时位置</a>
                             </li>
                             <li>
-                            <a href="#!trail">历史轨迹</a>
+                            <a href="javascript:void(0)" id="trail">历史轨迹</a>
                         </li>
                             <li>
-                                <a href="#!baiduTrail">历史轨迹-百度</a>
+                                <a href="javascript:void(0)" id="baiduMap">历史轨迹-百度</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <div id="main-content" class="normal-content">
-
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <div>
+                            <div class="new-bread">
+                                <p><a href="javascript:;">车辆定位</a><i class="deliver"></i><a id="tabName" href="javascript:void(0)">实时位置</a></p>
+                            </div>
+                            <div class="list-search">
+                                <div class="list-search_item" style="width: 25%;">
+                                    <div class="input-group">
+                                        <span class="input-group-addon list-search_label">设备号</span>
+                                        <input type="text" class="form-control list-search_input" id="deviceCode" name="deviceCode"/>
+                                    </div>
+                                </div>
+                                <div id="beginTime" class="list-search_item" style="width: 25%;">
+                                    <div class="input-group">
+                                        <span class="input-group-addon list-search_label">开始时间</span>
+                                        <div class="input-icon right">
+                                            <i class="fa fa-calendar"></i>
+                                            <input name="startTime" id="startTime" type="text" size="16" class="form-control form_datetime list-search_input list-search_inputpadding" value="" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="finishTime" class="list-search_item" style="width: 25%;">
+                                    <div class="input-group">
+                                        <span class="input-group-addon list-search_label">结束时间</span>
+                                        <div class="input-icon right">
+                                            <i class="fa fa-calendar"></i>
+                                            <input name="endTime" id="endTime" type="text" size="16" class="form-control form_datetime list-search_input list-search_inputpadding" value="" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list-search_item list-search_searchbtn" style="width: 5%;margin-right: 0;">
+                                    <a  class="toggleDiv dropdown-toggle list-button green-btn" id="positionSearch" >查询</a>
+                                </div>
+                                <div class="list-search_item list-search_searchbtn" style="width: 5%;margin-right: 0;">
+                                    <a  class="toggleDiv dropdown-toggle list-button green-btn" id="trailSearch" >查询</a>
+                                </div>
+                                <div class="list-search_item list-search_searchbtn" style="width: 5%;margin-right: 0;">
+                                    <a  class="toggleDiv dropdown-toggle list-button green-btn" id="baiduTrailSearch" >查询</a>
+                                </div>
+                            </div>
+                            <div id="map-content"></div>
+                            <div id="map-content-baidu"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -123,5 +177,6 @@
 <!-- 分组插件JS  -->
 <script src="pages/scripts/setting.js" type="text/javascript"></script>
 <script src="pages/scripts/main.js" type="text/javascript"></script>
+<script src="pages/scripts/welcome.js" type="text/javascript"></script>
 </body>
 </html>
